--- a/ex2.ipynb
+++ b/ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "109\n",
-      "102\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### load the graph to var G\n",
     "G = nx.read_gexf('net_il2015-2018.gexf')\n",
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,19 +81,202 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. find top-10 ministers for each Centralization degree that has been learned in class and describe what each degree means in the context of the current network "
+    "3. find top-10 ministers for each Centralization degree that has been learned in class and describe what each degree means in the context of the current network :*indegree ; *outdegree ; *betweenness ; *closness "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "degree centrality \n",
+      "indegree centrality \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('57', 0.6831683168316832),\n",
+       " ('19', 0.6633663366336634),\n",
+       " ('93', 0.46534653465346537),\n",
+       " ('100', 0.42574257425742573),\n",
+       " ('56', 0.40594059405940597),\n",
+       " ('26', 0.36633663366336633),\n",
+       " ('36', 0.297029702970297),\n",
+       " ('38', 0.27722772277227725),\n",
+       " ('30', 0.27722772277227725),\n",
+       " ('32', 0.24752475247524752)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "degree_centrality = nx.degree_centrality(udG)\n",
+    "print \"degree centrality \"\n",
+    "sorted(degree_centrality.items() , key = lambda x :x[1] , reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "indegree centrality \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('57', 0.6831683168316832),\n",
+       " ('19', 0.6633663366336634),\n",
+       " ('93', 0.46534653465346537),\n",
+       " ('100', 0.42574257425742573),\n",
+       " ('56', 0.40594059405940597),\n",
+       " ('26', 0.36633663366336633),\n",
+       " ('36', 0.297029702970297),\n",
+       " ('38', 0.27722772277227725),\n",
+       " ('30', 0.27722772277227725),\n",
+       " ('32', 0.24752475247524752)]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_degree_centrality = nx.in_degree_centrality(G)\n",
+    "print \"indegree centrality \"\n",
+    "sorted(in_degree_centrality.items() , key = lambda x :x[1] , reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outdegree centrality \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('20', 0.33663366336633666),\n",
+       " ('53', 0.27722772277227725),\n",
+       " ('82', 0.25742574257425743),\n",
+       " ('35', 0.22772277227722773),\n",
+       " ('108', 0.2079207920792079),\n",
+       " ('38', 0.2079207920792079),\n",
+       " ('69', 0.2079207920792079),\n",
+       " ('41', 0.19801980198019803),\n",
+       " ('22', 0.18811881188118812),\n",
+       " ('49', 0.18811881188118812)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_degree_centrality = nx.out_degree_centrality(G)\n",
+    "print \"outdegree centrality \"\n",
+    "sorted(out_degree_centrality.items() , key = lambda x :x[1] , reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "closeness centrality \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('57', 0.7166031987814165),\n",
+       " ('19', 0.6812824139556812),\n",
+       " ('93', 0.5896913220733838),\n",
+       " ('100', 0.5213536279001034),\n",
+       " ('56', 0.5151734685663688),\n",
+       " ('30', 0.4981477739610696),\n",
+       " ('17', 0.4449342194493422),\n",
+       " ('26', 0.41865436543654366),\n",
+       " ('11', 0.3895753211684805),\n",
+       " ('7', 0.36431307364313076)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "closeness_centrality = nx.closeness_centrality(G)\n",
+    "print \"closeness centrality \"\n",
+    "sorted(closeness_centrality.items() , key = lambda x :x[1] , reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "betweenness centrality \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('57', 0.7166031987814165),\n",
+       " ('19', 0.6812824139556812),\n",
+       " ('93', 0.5896913220733838),\n",
+       " ('100', 0.5213536279001034),\n",
+       " ('56', 0.5151734685663688),\n",
+       " ('30', 0.4981477739610696),\n",
+       " ('17', 0.4449342194493422),\n",
+       " ('26', 0.41865436543654366),\n",
+       " ('11', 0.3895753211684805),\n",
+       " ('7', 0.36431307364313076)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "betweenness_centrality = nx.closeness_centrality(G)\n",
+    "print \"betweenness centrality \"\n",
+    "sorted(betweenness_centrality.items() , key = lambda x :x[1] , reverse=True)[:10]"
+   ]
   },
   {
    "cell_type": "markdown",
