--- a/ex2.ipynb
+++ b/ex2.ipynb
@@ -279,6 +279,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eigenvector centrality \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('57', 0.23253577139218654),\n",
+       " ('19', 0.22522809132284463),\n",
+       " ('38', 0.22393906870767358),\n",
+       " ('20', 0.21345286980354722),\n",
+       " ('93', 0.20332379000298162),\n",
+       " ('76', 0.19716045482325112),\n",
+       " ('49', 0.1837117912393721),\n",
+       " ('59', 0.1754495201447123),\n",
+       " ('26', 0.17462015398334457),\n",
+       " ('100', 0.17210116022372993)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigenvector_centrality = nx.eigenvector_centrality(udG)\n",
+    "print \"eigenvector centrality \"\n",
+    "sorted(eigenvector_centrality.items() , key = lambda x :x[1] , reverse=True)[:10]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -344,10 +382,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('107', '66'), 1.0),\n",
+       " (('66', '91'), 1.0),\n",
+       " (('50', '107'), 1.0),\n",
+       " (('50', '66'), 1.0),\n",
+       " (('50', '91'), 1.0),\n",
+       " (('107', '91'), 1.0),\n",
+       " (('4', '104'), 0.9090909090909091),\n",
+       " (('4', '2'), 0.8461538461538461),\n",
+       " (('53', '82'), 0.8),\n",
+       " (('104', '2'), 0.7692307692307693)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_jc = nx.jaccard_coefficient(udG)\n",
+    "\n",
+    "\n",
+    "pred_jc_dict = {}\n",
+    "for u, v, p in preds_jc:\n",
+    "    pred_jc_dict[(u,v)] = p\n",
+    "\n",
+    "sorted(pred_jc_dict.items(), key=lambda x:x[1], reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('57', '19'), 4692),\n",
+       " (('93', '19'), 3264),\n",
+       " (('57', '100'), 3105),\n",
+       " (('26', '57'), 2829),\n",
+       " (('36', '19'), 2244),\n",
+       " (('56', '93'), 2160),\n",
+       " (('19', '79'), 2108),\n",
+       " (('57', '11'), 2070),\n",
+       " (('57', '63'), 2001),\n",
+       " (('26', '93'), 1968)]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_pa = nx.preferential_attachment(udG)\n",
+    "\n",
+    "pred_pa_dict = {}\n",
+    "for u, v, p in preds_pa:\n",
+    "    pred_pa_dict[(u,v)] = p\n",
+    "\n",
+    "sorted(pred_pa_dict.items(), key=lambda x:x[1], reverse=True)[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('57', '19'), 16.86292189338152),\n",
+       " (('93', '19'), 12.80071502462538),\n",
+       " (('26', '57'), 10.118470633902767),\n",
+       " (('26', '93'), 9.10961924226769),\n",
+       " (('57', '100'), 8.71500807286067),\n",
+       " (('14', '49'), 8.668548680050838),\n",
+       " (('19', '79'), 8.408444985311531),\n",
+       " (('36', '19'), 8.013251233619751),\n",
+       " (('26', '56'), 7.975861988132459),\n",
+       " (('53', '82'), 7.1581624441787)]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_aa = nx.adamic_adar_index(udG)\n",
+    "\n",
+    "pred_aa_dict = {}\n",
+    "for u, v, p in preds_aa:\n",
+    "    pred_aa_dict[(u,v)] = p\n",
+    "\n",
+    "sorted(pred_aa_dict.items(), key=lambda x:x[1], reverse=True)[:10]"
+   ]
   },
   {
    "cell_type": "markdown",
